--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -1,18 +1,18 @@
 {
    "title":"World Wide Web Foundation",
-   "the_web":"The Web",
+   "the_web":"",
    "the_web_breadcrumb":"The Web",
    "our_work":"Establishing the open Web as a basic right and a public good.",
-   "our_work_breadcrumb": "Our Work",
-   "about_us":"160 partner organisations. 70 countries. 30 team members. 4 Offices. 1 Mission.",
-   "about_us_breadcrumb": "About Us",
-   "support_us":"Support Us",
+   "our_work_breadcrumb":"Our Work",
+   "about_us":"160 partner organisations. 70 countries. 30 team members. 4 Hubs. 1 Mission.",
+   "about_us_breadcrumb":"About Us",
+   "support_us":"Help Us Advance Our Vital Work. ",
    "support_us_breadcrumb":"Support Us",
    "contact_us":"Contact Us",
    "contact_us_breadcrumb":"Contact Us",
    "donate":"Take Action",
    "spread_the_word":"Spread the word",
-   "signature":"2008-2015 World Wide Web Foundation. This work is licensed under a Creative Commons Attribution 4.0 International Licence",
+   "signature":"2008-2015 World Wide Web Foundation. This work is licensed under a <a href='http://creativecommons.org/licenses/by/4.0/'>Creative Commons Attribution 4.0 International Licence</a>",
    "privacy":"Terms of Use and Privacy",
    "cookies":"Cookies",
    "legal_notice":"Legal Notice",
@@ -36,7 +36,7 @@
    "research":"Deep insights, practical solutions.",
    "latest":"Latest",
    "tweets":"Tweets",
-   "piece_of_news":"Read the latest from the Web Foundation.",
+   "piece_of_news":"Read the latest from the Web Foundation. ",
    "home":"Home",
    "telephone_number":"Telephone number",
    "how_to_get_there":"How to find us",
@@ -48,24 +48,24 @@
    "contact":"Contact",
    "london_email":"london@webfoundation.org",
    "cape_town_email":"capetown@webfoundation.org",
-   "jakarta_town_email": "jakarta@webfoundation.org",
+   "jakarta_town_email":"jakarta@webfoundation.org",
    "locations":"Locations",
    "contact_form":"Contact Form",
    "media_resources":"Media Resources",
    "contact_media_resources":"Contact and Media resources",
-   "connecting_people":"Connecting people, Empowering Humanity",
+   "connecting_people":"",
    "boards_of_directors":"Boards of directors",
    "advisory_council":"Advisory Council",
    "team":"Diverse backgrounds, shared passion.",
-   "team_breadcrumb": "Our Team",
+   "team_breadcrumb":"Our Team",
    "boards":"The leaders helping us chart our course.",
-   "boards_breadcrumb": "Our Board",
+   "boards_breadcrumb":"Our Board",
    "financial_transparency":"Financial Transparency",
-   "job_opportunities":"Work with us. ",
-   "donate_volunteer":"Donate. Volunteer. Join the discusion",
+   "job_opportunities":"Job Opportunities",
+   "donate_volunteer":"Find out how you can support our work. ",
    "web_foundation_team":"The Web Foundation's Team",
    "read_full_profile":"Read full profile",
-   "mission_strategy":"The Web Foundation's Mission and Strategy",
+   "our_work_subheading":"",
    "the":"The",
    "projects":"Projects",
    "show_less":"Show less",
@@ -80,7 +80,7 @@
    "external_link":"This link goes to an external microsite",
    "related":"Related",
    "funders":"Primary Funders & Partners",
-   "other_funders": "Other Funders & Partners",
+   "other_funders":"Other Funders & Partners",
    "get_active":"Get active. Get the word out.",
    "join_the":"Join the",
    "conversation":"Conversation",
@@ -95,11 +95,9 @@
    "to":"To",
    "any_project":"Any project",
    "news_title":"News and Blogs",
-   "research_title": "Our Research and Publications",
-   "job_opportunities":"Job Opportunities",
-   "job_opportunities_breadcrumb": "Job Opportunities",
+   "research_title":"Our Research and Publications",
+   "job_opportunities_breadcrumb":"Job Opportunities",
    "work_with_us":"Work With Us",
-   "contact_form":"Contact Form",
    "send_message":"Send Message",
    "name":"Name",
    "email_address":"Email Address",
@@ -114,21 +112,21 @@
    "all_required_fields":"You must fill in all the required fields.",
    "email_error":"There was an error sending your message.",
    "email_sent":"Your message has been sent successfully.",
-   "media_resources":"Media Resources",
-   "team_members": "Team Members",
-   "_news": "News",
-   "_research": "Research",
-   "news_breadcrumb": "News and Blogs",
-   "research_breadcrumb": "Our Research and Publications",
-   "whoops": "Whoops!",
-   "something_wrong": "We couldn't find it",
-   "keep_calm": "But keep calm",
-   "home_credits_1": "<a href='https://www.flickr.com/photos/starsfdn/8595127780/'>&copy; Stars Foundation</a>, <a href='https://creativecommons.org/licenses/by-nc-nd/2.0/'>CC BY-NC-DC</a>",
-   "home_credits_2": "<a href='https://www.flickr.com/photos/backbone_campaign/16467700189/in/photolist-r6cgxk-rnwfLZ-rnyeLj-r6576s-rnyhdd-rnDpa2-r6566w-rkmxP3-rnDqug-rnycxm-rkmx1u-r654yU-nCFtLm-3d7XYg-qr1XFb-hwbd58-35CtzL-qekVai-hwbMSN-odccpS-hwbugY-hwbv1U-hwcVbn-hwbYNq-rAsqWB-486gqU-8vG2Uj-hxkSJQ-rApuSt-hxmysV-hxksa8-o1Wt8n-hxkRUG-hxkahw-hxmBDe-hxjT3B-hxmFot-hxkdRq-hwbDJU-hwbcyj-hwbFm1-hwbfMy-hwbFUA-hwb5g2-hxkGN5-hwbd3f-hxjRvt-hxk9C5-hxkozc-hxkvic'>&copy; Backbone Campaign</a>, <a href='https://creativecommons.org/licenses/by/2.0/'>CC BY</a>",
-   "home_credits_3": "<a href='https://www.flickr.com/photos/microturbian/4044350946/'>&copy; Microturbian</a>, <a href='https://creativecommons.org/licenses/by/2.0/'>CC BY</a>",
-   "email_us": "Email us",
-   "us_email": "contact@webfoundation.org",
-   "annual_reports": "Annual Reports",
-   "annual_reports_breadcrumb": "Annual Reports",
-   "report_library": "Our Report Library"
+   "team_members":"Team Members",
+   "_news":"News",
+   "_research":"Research",
+   "news_breadcrumb":"News and Blogs",
+   "research_breadcrumb":"Our Research and Publications",
+   "whoops":"Whoops!",
+   "something_wrong":"We couldn't find what you were looking for. ",
+   "keep_calm":"Please try again or send us an email: contact@webfoundation.org. ",
+   "home_credits_1":"<a href='https:\/\/www.flickr.com\/photos\/starsfdn\/8595127780\/'>\u00a9 Stars Foundation<\/a>, <a href='https:\/\/creativecommons.org\/licenses\/by-nc-nd\/2.0\/'>CC BY-NC-DC<\/a>",
+   "home_credits_2":"<a href='https:\/\/www.flickr.com\/photos\/backbone_campaign\/16467700189\/in\/photolist-r6cgxk-rnwfLZ-rnyeLj-r6576s-rnyhdd-rnDpa2-r6566w-rkmxP3-rnDqug-rnycxm-rkmx1u-r654yU-nCFtLm-3d7XYg-qr1XFb-hwbd58-35CtzL-qekVai-hwbMSN-odccpS-hwbugY-hwbv1U-hwcVbn-hwbYNq-rAsqWB-486gqU-8vG2Uj-hxkSJQ-rApuSt-hxmysV-hxksa8-o1Wt8n-hxkRUG-hxkahw-hxmBDe-hxjT3B-hxmFot-hxkdRq-hwbDJU-hwbcyj-hwbFm1-hwbfMy-hwbFUA-hwb5g2-hxkGN5-hwbd3f-hxjRvt-hxk9C5-hxkozc-hxkvic'>\u00a9 Backbone Campaign<\/a>, <a href='https:\/\/creativecommons.org\/licenses\/by\/2.0\/'>CC BY<\/a>",
+   "home_credits_3":"<a href='https:\/\/www.flickr.com\/photos\/microturbian\/4044350946\/'>\u00a9 Microturbian<\/a>, <a href='https:\/\/creativecommons.org\/licenses\/by\/2.0\/'>CC BY<\/a>",
+   "email_us":"Email us",
+   "us_email":"contact@webfoundation.org",
+   "annual_reports":"Annual Reports",
+   "annual_reports_breadcrumb":"Annual Reports",
+   "report_library":"",
+   "support_us_heading": "Help Us Advance Our Vital Work."
 }
